--- a/app/src/main/res/layout/fragment_internal.xml
+++ b/app/src/main/res/layout/fragment_internal.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <Button
+        android:id="@+id/internal_fragment_button_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="internal"
+        android:text="start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
