--- a/app/src/main/res/layout/fragment_shared.xml
+++ b/app/src/main/res/layout/fragment_shared.xml
@@ -4,11 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/shared_fragment_recycler_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="shared"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
